--- a/src/TCLstyles.css
+++ b/src/TCLstyles.css
@@ -112,7 +112,15 @@ footer {
 
 background-color: red;
  color: white;
- margin-left: 43.5% ;
+ margin-left: 2.5% ;
+ display: inline-flex;
+}
+#archivetask {
+
+
+background-color: red;
+ color: white;
+ margin-left: 20.5% ;
  display: inline-flex;
 }
 
@@ -155,14 +163,44 @@ background-color: red;
 #tcl{
     display: inline-flex;
 }
+
+#archivetask:hover{
+    background-color: black;
+}
+
+#archivetask:active{
+    background-color: white;
+}
+
+#archivetasks:hover{
+    background-color: red;
+    cursor: pointer;
+}
+
+
+#archivelive:hover{
+    background-color: black;
+    cursor: pointer;
+}
+
+#archivelive:active{
+    background-color: white;
+}
 #live {
 
 
 background-color: red;
  color: white;
- margin-left: 30% ;
+ margin-left: 1% ;
 }
+#archivelive {
 
+
+background-color: red;
+ color: white;
+ margin-left: 10.5% ;
+ display: inline-flex;
+}
 #logout {
  color: white;
  margin-left: 95% ;
@@ -176,14 +214,14 @@ background-color: red;
     z-index: 999;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 105%;
+    height: 105%;
     background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
     background-color: #fff;
-    margin: 15% auto;
+    margin: 10% auto;
     padding: 20px;
     width: 300px;
     border-radius: 8px;
@@ -200,20 +238,217 @@ background-color: red;
     margin-bottom: 5%;
 }
 
+#fixed span:nth-child(1){
+    width: 65%;
+    max-width: 65%;
+}
+
+#fixed span:nth-child(2){
+    width: 17%;
+    max-width: 17%;
+}
+
+#fixed span:nth-child(3){
+    width: 17%;
+    max-width: 17%;
+}
+
+#taskarchive{
+    width: 100%;
+    display: inline-flex;
+    flex-direction: row;
+}
+
+#taskarchive:hover{
+    background-color: red;
+    cursor: pointer;
+}
+
+#taskarchive:active{
+    background-color: black;
+    color: white;
+}
+
+#taskname{
+    width: 65%;
+    max-width: 65%;
+}
+
+#taskstatus{
+    width: 17%;
+    max-width: 17%;
+}
+
+#taskmodified{
+    width: 17%;
+    max-width: 17%;
+}
+
+#fixed{
+    width: 100%;
+    display: inline-flex;
+    flex-direction: row;
+}
+
+.modal1 {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content1 {
+    background-color: #fff;
+    padding: 20px;
+    height: 80%;
+    width: 90%;
+    border-radius: 8px;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.close1 {
+    margin-left: 85%;
+    float: right;
+    position: fixed;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+#task_archive1{
+    margin-bottom: 2%;
+    text-align: center;
+}
+
+.archive{
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    align-items: center;
+    justify-content: center;
+}
+
+.archive ul{
+    background-color: #fff;
+    padding: 20px;
+    height: 40%;
+    width: 20%;
+    border-radius: 8px;
+    display: inline-flex;
+    flex-direction: column;
+}
+
+.archive li:nth-child(3){
+    display: inline-flex;
+    flex-direction: row;
+    background-color: white;
+}
+
+.archive li:nth-child(1){
+    display: inline-flex;
+    background-color: white;
+}
+
+.archive h3{
+    margin-right: 40%;
+}
+
+.archive li:nth-child(2){
+    display: inline-flex;
+    flex-direction: row;
+    background-color: white;
+}
+
+.exitmodal:hover{
+    cursor: pointer;
+}
+
+.archive button:nth-child(1){
+    margin-right: 50%;
+}
+
+.archive button:hover{
+    background-color: red;
+    cursor: pointer;
+}
+
+.archive button:active{
+    background-color: black;
+}
+
+#livecheck{
+    display: none;
+}
 
 
 
+#logout {
+ color: white;
+ margin-left: 95% ;
+ display: inline-flex;
+}
 
+#logoutICON {
 
+ color: black;
+ display: inline-flex;
+}
 
+#logoutICON:hover{
+    background-color: red;
+  
+}
 
+#logoutICON:active{
+    background-color: #2c3e50;
+    
+}
 
+#employeeSelect
 
+{
+margin-bottom: 5px;
+height: 35px;
 
+}
 
+#id {
+    margin-right: 93% ;
+}
 
+.modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    width: 90%;
+    max-width: 500px;
+    border-radius: 8px;
+    text-align: center;
+}
 
-
+/* Uniform styling for form elements inside modal */
+.modal-content input[type="text"],
+.modal-content input[type="date"],
+.modal-content input[type="url"],
+.modal-content select,
+.modal-content textarea {
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 14px;
+    box-sizing: border-box;
+}
 
 
 
